# DUAV2023

./: .gitignore  CameraError.md  README.md  ServoSpecs.txt  enable_ap_vnc_ssh.md  enable_ssh.md  installer.sh  run.sh  ubuntu_installer.sh
sources/: run.sh
sources/automate/: automate.py  automate_fake.py  automate_time.py  fake_automate.py  moveTo.py  servo.py  test_com_mavlink.py  test_servo.py
sources/automate/missions/: Hasparren1.plan  Hasparren_Loop_2.plan  Hasparren_Mission1.plan  Hasparren_Mission1.txt  Jonzac_Loop_1.plan  Jonzac_Test_1.plan
sources/opencv-samples/10_DelayedSubtraction/: README.md  main.cpp  main.py
sources/opencv-samples/11_DiffBetweenImages/: README.md  main.cpp  main.py
sources/opencv-samples/12_ImageSegmentation/: README.md  main.py
sources/opencv-samples/13_EdgeDetection/: README.md  main.cpp  main.py
sources/opencv-samples/14_HistogramEqualizationGray/: README.md  main.cpp  main.py
sources/opencv-samples/15_HistogramEqualizationRGB/: README.md  main.cpp  main.py
sources/opencv-samples/16_GaussianBlur/: README.md  main.cpp  main.py
sources/opencv-samples/17_CameraUDP/sender/: CMakeLists.txt  README.md  main.cpp  main.py  mainOLD.py
sources/opencv-samples/1_ReadImage/: README.md  main.cpp  main.py
sources/opencv-samples/2_ReadAndWriteImage/: README.md  main.cpp  main.py
sources/opencv-samples/3_ScanImage/: README.md  main.cpp
sources/opencv-samples/4_Mask/: README.md  main.cpp  main.py
sources/opencv-samples/5_ReadVideo/: README.md  main.cpp  main.py
sources/opencv-samples/6_CameraCapture/: README.md  main.cpp  main.py
sources/opencv-samples/7_CameraRecorder/: README.md  main.cpp  main.py
sources/opencv-samples/8_DualDisplayDelayed/: README.md  main.cpp  main.py
sources/opencv-samples/9_ImagesSubtraction/: README.md  main.cpp  main.py
sources/rtCam/: CMakeLists.txt  README.md  compile.sh  main.cpp  main.py  rtCam.cpp
sources/rtCam/cpp/: CMakeLists.txt  README.md
sources/rtCam/cpp/headers/: config.hpp  main.hpp
sources/rtCam/cpp/sources/: config.cpp  main.cpp  testWaitKey.cpp
sources/rtCam/listener/: main.py
sources/rtCam/python/: README.md  config.py  config.yaml  main.py  testWaitKey.py
sources/test_ssh/: CMakeLists.txt  README.md  main.cpp  main.py
(+10 files in other folders)
